fixed menu item height on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -125,7 +125,7 @@ nav ul {
 nav a {
     display: block;
     margin-bottom: 10px;
-    padding: 15px 0;
+    padding: 5px 0;
 
     text-align: center;
     text-decoration: none;
